Bugfix : z-index des autocompletes dans les popups.
git-svn-id: svn+ssh://svn.projects.openwide.fr/svnroot/owsi-tools/branches/owsi-core-0.8-MAINTENANCE@2606 d3474844-eb8e-4abc-b058-2b321fed648b

--- a/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap2/jqueryui/jquery-ui-1.8.23.custom.css
+++ b/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap2/jqueryui/jquery-ui-1.8.23.custom.css
@@ -605,7 +605,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 }
 /* Bugfix Autocomplete/Popover dans modales Bootstrap */
 .ui-widget.ui-autocomplete, .popover {
-	z-index: 151;
+	z-index: 300;
 }
 /* Month picker */
 .ui-monthpicker select.ui-datepicker-year {
